Fixes carousel issues and optimises section spacing

--- a/app/components/about.module.css
+++ b/app/components/about.module.css
@@ -23,6 +23,6 @@
   .about {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: var(--spacer-xlg);
+    gap: var(--spacer-lg);
   }
   }
